--- a/challenges.yml
+++ b/challenges.yml
@@ -392,7 +392,7 @@ arrays2_guessautokeymc:
     features:
         multiple_choice:
             choices:
-                a: "&#48;" # equal to '0' - really strange, but 0 symbol don't display in front-end.
+                a: "&#48;" # equal to '0' - really strange, but 0 number don't display in front-end.
                 b: 3
                 c: 4
                 d: Bear
